[tool.poetry]
name = "omni_sparql"
version = "0.1.0"
description = "SPARQL queries for OMNIBENCHMARK triplestore."
authors = ["Anthony Sonrel <anthony.sonrel@uzh.ch>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.7"
SPARQLWrapper = "1.8.5"
rdflib = "6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
